--- a/meu-projeto/pom.xml
+++ b/meu-projeto/pom.xml
@@ -82,6 +82,12 @@
         	<version>7.14.0</version>
         	<scope>test</scope>
     	</dependency>
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-spring</artifactId>
+			<version>7.14.0</version>
+			<scope>test</scope>
+		</dependency>
 	    <dependency>
 	        <groupId>junit</groupId>
 	        <artifactId>junit</artifactId>
