--- a/meu-projeto/src/main/resources/application.properties
+++ b/meu-projeto/src/main/resources/application.properties
@@ -11,5 +11,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # Configuração para mostrar o SQL no console
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+
+logging.level.root=INFO
